# RGPL

./: .gitignore  README.md  builds_and_runs.py  gpl_hard_negative_miner.py  gpl_query_writer.py  gpl_trainer.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
rgpl/: lightning.py  utils.py
rgpl/hard_negative_miner/: HardNegativeMiner.py  HardNegativeWriter.py
rgpl/query_models/: QueryAugmenter.py  QueryGenerator.py  QueryWriter.py
rgpl/trainer/: EvaluateRetrieval.py  RetriverWriter.py  beir_utils_rewritten.py  hard_negative_dataset.py
tests/: builds_and_runs.py
