[tool.poetry]
name = "rgpl"
version = "0.1.0"
description = "This package contains our code for the paper [URL]."
authors = ["root-goksenin <Goksenin.yuksel@outlook.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beir="^2.0.0"
pytorch-lightning="1.5.10"
sentence-transformers="2.6.1"
torch="2.2.2"
tensorboard="2.14.0"
hydra-core = "1.3.2"
omegaconf = "2.3.0"
nltk = "^3.8.1"
transformers = "4.39.2"
sentencepiece = "^0.2.0"
easy-elasticsearch = "^0.0.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
